Legacy compiling
Signed-off-by: Carlos Quiroz <carlos.quiroz@noirlab.edu>